add logic to run jsonoutput